added a route to calculate the price of the booking for estimation
